[package]
name = "subxt_example_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["web"]

native = ["subxt/native"]

web = ["subxt/web", "js-sys", "wasm-bindgen", "wasm-bindgen-futures", "serde-wasm-bindgen", "console_error_panic_hook"]

[dependencies]

subxt = { version = "0.32.1", default-features = false, features = ["jsonrpsee", "unstable-light-client"], target_arch = "wasm32" }
subxt-metadata = { version = "0.32.1" }
subxt-codegen = { git = "https://github.com/paritytech/subxt", branch = "tadeohepperle/implement-scale-typegen-for-type-generation", default-features = false }
subxt-signer = { version = "0.32.1", features = ["subxt"] }
scale-typegen-description = { git = "https://github.com/paritytech/scale-typegen", branch = "recursive-derives" }

syn = "2.0.29"
quote = "1.0.33"
anyhow = "1.0.75"
proc-macro2 = "1.0.66"
heck = "0.4.1"
prettyplease = "0.2.12"
scale-info = "2.10.0"
bitvec = "1.0.1"
pollster = "0.3.0"
regex = "1.5"

serde = { version = "1.0.188", features = ["derive"] }
js-sys = { version = "0.3.64", optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
wasm-bindgen-futures = { version = "0.4.37", optional = true }
serde-wasm-bindgen = { version = "0.5.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
peekmore = "1.3.0"
smallvec = "1.11.1"
async-trait = "0.1.74"


[lib]
crate-type = ["cdylib", "rlib"]


[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[dev-dependencies]
trybuild = "1.0.83"
scale-value = "0.12.0"
scale-decode = "0.9.0"
parity-scale-codec = "*"
